fixed broken link, hide search field on smaller viewports

--- a/wp-content/themes/learningWordPress/style.css
+++ b/wp-content/themes/learningWordPress/style.css
@@ -271,6 +271,13 @@ p.post-info a:visited {
   }
 }
 
+@media (max-width: 818px) {
+  div.hd-search #searchsubmit,
+  div.hd-search #s {
+    display: none;
+  }
+}
+
 /*image styles*/
 img {
   max-width: 100%;
